# raw

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.lavish/: sprint-0-5-plan.html
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/src/raw/: __init__.py  main.py
apps/backend/src/raw/api/: health.py  routes.py
apps/backend/src/raw/config/: __init__.py  settings.py
apps/backend/src/raw/core/: graph.py  loop.py  state.py
apps/backend/src/raw/packs/: contract.py  loader.py
apps/backend/src/raw/slots/guardrails/: __init__.py
apps/backend/src/raw/slots/llm/: __init__.py
apps/backend/src/raw/slots/memory/: __init__.py
apps/backend/src/raw/slots/observability/: __init__.py
apps/backend/src/raw/slots/tools/: __init__.py
apps/backend/src/raw/slots/vector/: __init__.py
apps/backend/tests/: test_core_loop.py  test_graph.py  test_health.py  test_pack_loader.py
apps/frontend/: README.md  package.json
docs/: ARCHITECTURE.md  BASE-VS-PACK.md  DECISIONS.md  DEPLOYMENT.md  HOW-TO-BUILD-A-PACK.md  ROADMAP.md
example-pack/: README.md  pack.json
example-pack/tools/: echo.py
